# ytpmvsd

./: README.md  app.py  config.example.toml  config.py  requirements.txt
plugin/: CMakeLists.txt
plugin/include/: .gitattributes  api.hpp  main.hpp
plugin/src/: api.cpp  home_tab.cpp  main.cpp
plugin/ui/: main.ui
web/: api.py  app.py  requirements.txt  test.py  utils.py
web/prober/: .clangd  .gitignore  CMakeLists.txt  __init__.py  avtextformat.cpp  bind.cpp  bind.hpp  cmdutils.hpp  getenv_utf8.h  main.cpp  prober.cpp  prober.hpp  setup.py  stream.cpp  stream.hpp  tf_default.cpp
web/videotools/: CMakeLists.txt  avtextformat.cpp  avtextformat.hpp  avtextwriters.hpp  cmdutils.cpp  cmdutils.hpp  config.h  ffprobe.cpp  fopen_utf8.h  main.cpp  prober.hpp  tf_compact.cpp  tf_flat.cpp  tf_ini.cpp  tf_json.cpp  tf_xml.cpp  tw_avio.cpp  tw_buffer.cpp  tw_stdout.cpp
